--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 body{
     font-family: "Roboto", sans-serif;
     color: #212121;
@@ -162,14 +163,6 @@ ul{
     padding: 30px 10px 0;
 }
 
-/* .modal-formulariol{
-    outline: none;
-    border:1px rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    transition-duration:250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-} */
-
 .modal-formulario{
     position: fixed;
     top: 0;
@@ -202,9 +195,12 @@ ul{
 }
 
 .data-modal-close{
+    position: absolute;
+    top: 3px;
+    right: 3px;
     text-decoration: none;
     color: #fff;
-    background-color: #F26250;
+    background-color: #131313;
     padding: 1em 3em;
     border: 1px solid ;
     border-radius: 6px;
@@ -236,7 +232,69 @@ ul{
 }
 
 
-/* ----SOLUCIONES----------- */
+.data-modal-open{
+    color: #fff;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 30px;
+    letter-spacing: 0.96px;
+    padding: 10px 32px;
+    border: none;
+    border-radius: 4px;
+    background: #2196f3;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.data-modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #111111bd;
+    display: flex;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity .6s .9s;
+    --transform: translateY(-100vh);
+    --transition: transform .8s;
+}
+
+.modal__show{
+    opacity: 1;
+    pointer-events: unset;
+    transition: opacity .6s;
+    --transform: translateY(0);
+    --transition: transform .8s .8s;
+}
+
+.modal__container{
+    margin: auto;
+    width: 528px;
+    height: 581px;
+    max-width: 600px;
+    max-height: 90%;
+    background-color: #fff;
+    border-radius: 6px;
+    padding: 3em 2.5em;
+    display: grid;
+    gap: 1em;
+    place-items: center;
+    grid-auto-columns: 100%;
+    transform: var(--transform);
+    transition:var(--transition);
+}
+
+.modal__title{
+    font-size: 2.5rem;
+}
+
+.modal__paragraph{
+    margin-bottom: 10px;
+}
+
+
 
 /* -----Atencion------------ */
 
@@ -352,6 +410,7 @@ ul{
     font-weight: 500;
     letter-spacing: 0.48px;
 }
+
 
 .text-profession{
     color: #757575;
@@ -599,6 +658,7 @@ footer .container{
     transform: translatey(100%);
     transition: transform 250ms ease-in-out;
 }
+
 
 .box:hover .overlay {
     transform: translatey(0);
