--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ ul{
 }
 
 
-/* --header----------------- */
+/*-----Header----------------- */
 
 
 .nav-container{
@@ -45,12 +45,17 @@ ul{
     gap: 50px;
 }
 
-.after{
-    font-size: 20px;
+.current-page::after {
     position: relative;
+    content: "";
+    display: block;
+    border-radius: 2px;
+    border: 2px solid var(--accent-color);
+    width: auto;
+    bottom: -28px;
 }
 
-.after:after{
+/* .after:after{
     position: absolute;
     content:´´;
     border-radius: 2px; 
@@ -64,7 +69,7 @@ ul{
 
 .after:hover{
     color: #2196f3;
-}
+} */
 
 .web-logo{
     color: #2196f3;
@@ -119,7 +124,7 @@ ul{
     margin-right: 8px;
 }
 
-/* --header----------------- */
+/* -----Header----------------- */
 
 /* ----SOLUCIONES----------- */
 
@@ -130,7 +135,6 @@ ul{
     flex-shrink: 0;
     background: #2F303A;
     margin: auto;
-
 }
 
 .bgimg{
@@ -179,17 +183,14 @@ ul{
 }
 
 .container-modal{
+    width: 528px;
+    height: 581px;
+    background-color: var(--white-color);
     margin: auto;
-    width: 90%;
-    max-width: 600px;
-    max-height: 90%;
-    background-color: #fff;
+    padding: 40px;
     border-radius: 6px;
-    padding: 3em 2.5em;
-    display: grid;
-    gap: 1em;
-    place-items: center;
-    grid-auto-columns: 100%;
+    position: relative;
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
     transform: var(--transform);
     transition:var(--transition);
 }
@@ -230,7 +231,6 @@ ul{
     background: #2196f3;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
-
 
 .data-modal-open{
     color: #fff;
@@ -295,6 +295,7 @@ ul{
 }
 
 
+/* ----SOLUCIONES----------- */
 
 /* -----Atencion------------ */
 
@@ -411,7 +412,6 @@ ul{
     letter-spacing: 0.48px;
 }
 
-
 .text-profession{
     color: #757575;
     text-align: center;
@@ -438,8 +438,6 @@ ul{
     border-radius: 25px;
     margin-bottom: 25px;
 }
-
-
 
 .list-svg-redes:hover{
     background-color: #2196f3;
@@ -563,7 +561,7 @@ footer .container{
     width: 44px;
     height: 44px;
     justify-content: center;
-    fill:#2196F3;
+    background-color: rgba(255, 255, 255, 0.1);
     border-radius: 25px;
 }
 
@@ -586,8 +584,6 @@ footer .container{
 
 
 /* ----footer------------- */
-
-
 
 /* ---------------PORTAFOLIO---------------------- */
 
@@ -633,11 +629,14 @@ footer .container{
 .shadowflex {
     border: 1px solid #eee;
     background: #fff;
+    position: relative;
+    overflow: hidden;
+}
+
+.shadowflex:hover{
     box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
     0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
     box-shadow: 10px 10px 8px 2px rgba(0, 0, 0, 0.3);
-    position: relative;
-    overflow: hidden;
 }
 
 .box{
@@ -653,12 +652,11 @@ footer .container{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 103%;
     background-color: rgba(33, 150, 243, 0.90);
     transform: translatey(100%);
     transition: transform 250ms ease-in-out;
 }
-
 
 .box:hover .overlay {
     transform: translatey(0);
