--- a/css/styles.css
+++ b/css/styles.css
@@ -42,17 +42,19 @@ ul{
     background: #fff;
     border-bottom:1px solid #ECECEC;
     box-sizing: border-box;
-    gap: 50px;
+    gap: 90px;
 }
 
-.current-page::after {
+.border-page::after {
     position: relative;
     content: "";
     display: block;
     border-radius: 2px;
-    border: 2px solid var(--accent-color);
-    width: auto;
-    bottom: -28px;
+    background-color: #2196F3;
+    margin-bottom: -20px;
+    width: 100%;
+    height:4px;
+    bottom:-29px;
 }
 
 /* .after:after{
@@ -89,6 +91,7 @@ ul{
 
 .link1:hover{
     color: #2196f3;
+    cursor: pointer
 }
 
 .link2{
@@ -99,6 +102,7 @@ ul{
 
 .link2:hover{
     color: #2196F3;
+    cursor: pointer
 }
 
 .link2:hover .cell-svg{
@@ -230,6 +234,7 @@ ul{
     border-radius: 4px;
     background: #2196f3;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    cursor: pointer
 }
 
 .data-modal-open{
@@ -309,8 +314,6 @@ ul{
     background: rgba(245, 244, 250,1);
     width: 270px;
     height: 120px;
-    top: 774px;
-    left: 215px ;
     border-radius: 4px;
     margin-left: 20px;
 }
@@ -437,6 +440,7 @@ ul{
     fill: rgba(175, 177,184,1);
     border-radius: 25px;
     margin-bottom: 25px;
+    cursor: pointer
 }
 
 .list-svg-redes:hover{
@@ -478,6 +482,7 @@ ul{
     border: solid rgba(175,177,184,1)1px;
     justify-content:center;
     align-items: center;
+    cursor: pointer
 }
 
 .box-svg:hover{
@@ -518,6 +523,7 @@ ul{
     letter-spacing: 0.78px;
     padding-top: 60px;
     text-decoration: none;
+    margin-left: 37px;
 }
 
 .ubicacion{
@@ -563,6 +569,7 @@ footer .container{
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 25px;
+    cursor: pointer
 }
 
 .icon-redes-f{
@@ -596,6 +603,7 @@ footer .container{
     border-radius: 4px;
     padding: 6px 24px;
     margin-right: 8px;
+    cursor: pointer
 }
 
 .div-buttons .link {
@@ -626,11 +634,18 @@ footer .container{
     padding-bottom: 50px;
 }
 
+.target:hover .overlay{
+    transform: translateY(0);
+}
+
+
+
 .shadowflex {
     border: 1px solid #eee;
     background: #fff;
     position: relative;
     overflow: hidden;
+    cursor: pointer
 }
 
 .shadowflex:hover{
@@ -656,10 +671,6 @@ footer .container{
     background-color: rgba(33, 150, 243, 0.90);
     transform: translatey(100%);
     transition: transform 250ms ease-in-out;
-}
-
-.box:hover .overlay {
-    transform: translatey(0);
 }
 
 .overlay p {
