--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ ul{
     background: #fff;
     border-bottom:1px solid #ECECEC;
     box-sizing: border-box;
-    gap: 90px;
+    gap: 50px;
 }
 
 .border-page::after {
@@ -81,6 +81,7 @@ ul{
     font-weight: 700;
     letter-spacing: 0.78px;
     text-decoration: none;
+    margin-left: 80px;
 }
 
 .link1{
@@ -477,7 +478,6 @@ ul{
     display: flex;
     width: 170px;
     height: 81px;
-    display: flex;
     border-radius: 4px;
     border: solid rgba(175,177,184,1)1px;
     justify-content:center;
@@ -495,10 +495,10 @@ ul{
 
 .svg-redes{
     width: 106px;
-    height: 52.826087951660156px;
+    height: 60px;
     top:2461.0869750976562px;
     left: 247px;
-    padding: 7px 33px 0px 32px;
+    padding: 7px 4px 0px 7px;
     fill: rgba(175, 177,184,1);
 }
 
@@ -521,9 +521,18 @@ ul{
     font-family: Raleway;
     font-weight: 700;
     letter-spacing: 0.78px;
-    padding-top: 60px;
     text-decoration: none;
-    margin-left: 37px;
+    margin-left: 60px;
+}
+
+.city-footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 5px;
+    margin-top: 40px;
+    margin-left: -185px;
 }
 
 .ubicacion{
